<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Photography Location Logger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Photography Location Logger</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="google_maps_API_key">AIzaSyD_rRcebaPSB1cG0f9YN0PASHoHgdMCmEM</string>
    <string name="what3words_API_key">CU4UW90X</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_review">Add Review</string>
    <string name="menu_saved_locations">Saved Locations</string>
    <string name="menu_help">Help</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

    <!-- Home Screen -->
    <string name="home_banner_content_description">Home Screen Banner</string>
    <string name="home_icon_content_description">Home Screen Icon</string>

    <!-- Search Screen -->
    <string name="map_search_icon_content_description">Search Screen Search Icon</string>
    <string name="map_gps_icon_content_description">Search Screen GPS Icon</string>
    <string name="map_map_type_icon_content_description">Search Screen Map Type Icon</string>
    <string name="map_search_bar_hint">Enter Address, City or Postcode</string>


    <!-- Add Review Screen -->
    <string name="add_review_banner_content_description">Add Review Screen Banner</string>
    <string name="add_review_icon_content_description">Add Review Screen Icon</string>
    <string name="add_review_image_content_description">Add Review Screen Image</string>
    <string name="add_review_location_name_hint">Location Name</string>
    <string name="add_review_review_hint">Review</string>
    <string name="add_review_upload_image_button_text">Upload Image</string>
    <string name="add_review_take_image_button_text">Take Image</string>
    <string name="add_review_remove_image_button_text">Remove Image</string>
    <string name="add_review_submit_button_text">Submit Review</string>

    <!-- Saved Locations Screen -->
    <string name="saved_locations_icon_content_description">Saved Locations Screen Icon</string>
    <string name="saved_locations_notifications_fab_content_description">Saved Locations Screen Set Notifications Floating Action Button</string>
</resources>