<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_add_review"
            android:icon="@drawable/ic_menu_add_location"
            android:title="@string/menu_add_review" />
        <item
            android:id="@+id/nav_saved_locations"
            android:icon="@drawable/ic_menu_save"
            android:title="@string/menu_saved_locations" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/menu_help" />
        </menu>
    </item>
</menu>