<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.photographylocationlogger.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.photographylocationlogger.ui.search.MapFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_add_review"
        android:name="com.example.photographylocationlogger.ui.addreview.AddReviewFragment"
        android:label="@string/menu_add_review"
        tools:layout="@layout/fragment_add_review" />

    <fragment
        android:id="@+id/nav_saved_locations"
        android:name="com.example.photographylocationlogger.ui.savedlocations.SavedLocationsFragment"
        android:label="@string/menu_saved_locations"
        tools:layout="@layout/fragment_add_review" />
</navigation>