<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map_google_map"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <RelativeLayout
        android:id="@+id/map_search_bar_layout"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_margin="8dp"
        android:elevation="10dp"
        android:background="@drawable/white_border">

        <ImageView
            android:id="@+id/map_search_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_menu_search"
            android:contentDescription="@string/map_search_icon_content_description" />

        <EditText
            android:id="@+id/map_search_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/map_search_icon"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:background="@null"
            android:hint="@string/map_search_bar_hint"
            android:autofillHints="@string/map_search_bar_hint"
            android:imeOptions="actionSearch"
            android:inputType="text" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/map_gps_icon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="8dp"
        android:elevation="10dp"
        android:src="@drawable/ic_gps"
        android:background="@drawable/white_border"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/map_gps_icon_content_description" />

    <ImageView
        android:id="@+id/map_map_type_icon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="8dp"
        android:elevation="10dp"
        android:src="@drawable/ic_map"
        android:background="@drawable/white_border"
        app:layout_constraintTop_toBottomOf="@id/map_gps_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/map_map_type_icon_content_description" />
</androidx.constraintlayout.widget.ConstraintLayout>